# Techniker_23-24_Fahrkartenautomat

./: CMakeLists.txt  main.c
